# gd32c1x3-hal

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  memory.x
src/: afio.rs  backup_domain.rs  can.rs  crc.rs  dma.rs  fmc.rs  gpio.rs  i2c.rs  lib.rs  prelude.rs  rcu.rs  spi.rs  time.rs  timer.rs  usb.rs  watchdog.rs
src/gpio/: erased.rs  partially_erased.rs
src/i2c/: blocking.rs
src/rcu/: enable.rs
src/timer/: counter.rs  delay.rs  monotonic.rs  pins.rs  pwm.rs  pwm_input.rs
