[package]
authors = ["guineawheek <guineawheek@gmail.com>", "Sparrowgrine <nxmq99@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the GD32C1x3 family of microcontrollers"
keywords = ["arm", "cortex-m", "gd32", "hal"]
license = "MIT OR Apache-2.0"
name = "gd32c1x3-hal"
repository = "https://github.com/guineawheek/gd32c1x3-hal"
edition = "2021"
version = "0.1.0"


[package.metadata.docs.rs]
features = ["gd32c103", "rt"]
default-target = "x86_64-unknown-linux-gnu"


[dependencies]
cortex-m = "0.7.7"
embedded-hal = {version = "0.2.7", features = ["unproven"]}
embedded-dma = "0.2.0"
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
nb = "1.1.0"
gd32c1 = "0.9.1"
fugit = "0.3.7"
fugit-timer = "0.1.3"
void = { default-features = false, version = "1.0.2" }
bitflags = "1.3.2"
bxcan = { package = "bxcan-ng", version = "0.8.0" }
synopsys-usb-otg = { package = "gd32-synopsys-usb-otg", version = "0.4.1", features = ["fs"] }

[features]
default = ["gd32c103"]

gd32c103 = ["gd32c1/gd32c103"]
gd32c113 = ["gd32c1/gd32c113"]
critical-section = ["gd32c1/critical-section"]
rt = ["gd32c1/rt"]

[profile.release]
codegen-units = 1
debug = true
lto = true
